--- a/src/app/main.css
+++ b/src/app/main.css
@@ -37,4 +37,8 @@
   --shadow-secondary-m: 4px 8px 16px 0px rgba(112, 192, 91, 0.20);
   --shadow-secondary-l: 8px 16px 32px 0px rgba(112, 192, 91, 0.20);
   --shadow-secondary-xl: 16px 32px 64px 0px rgba(112, 192, 91, 0.20);
+
+  /* platform */
+  --tablet: 1207px;
+  --mobile: 767px;
 }
