- counting product card

--- a/src/app/main.css
+++ b/src/app/main.css
@@ -20,6 +20,7 @@
   --pallete-info: #1CB9FC;
   --pallete-warning: #FCA21C;
   --pallete-error: #D80000;
+  --peach-puff: #FCD5BA;
 
   /* shadows */
   --shadow-default-xs: 1px 2px 4px 0px rgba(0, 0, 0, 0.10);
