--- a/src/app/main.css
+++ b/src/app/main.css
@@ -21,6 +21,7 @@
   --pallete-warning: #FCA21C;
   --pallete-error: #D80000;
   --peach-puff: #FCD5BA;
+  --secondary-muted: #E5FFDE;
 
   /* shadows */
   --shadow-default-xs: 1px 2px 4px 0px rgba(0, 0, 0, 0.10);
